--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,15 +4,14 @@ spring:
     username: tehno_user
     password: Hfleuf7&
     driver-class-name: org.postgresql.Driver
-  flyway:
+  liquibase:
     enabled: true
-    locations: classpath:db/migration
-    baseline-on-migrate: true
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+    default-schema: public
   jpa:
-    hibernate:
-      ddl-auto: create
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-    show-sql: true
+        default_schema: public
+        jdbc:
+          lob:
+            non_contextual_creation: true
